# serializer version: 1
# name: TestQuery.test_clickhouse_timestamp_handling
  '''
  -- ClickHouse
  
  SELECT if(not(empty(events__exception_issue_override.issue_id)), events__exception_issue_override.issue_id, accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_1)s), ''), 'null'), '^"|"$', ''), %(hogql_val_2)s)) AS id, count(DISTINCT events.uuid) AS occurrences, count(DISTINCT nullIf(events.`$session_id`, %(hogql_val_3)s)) AS sessions, count(DISTINCT events.distinct_id) AS users, max(toTimeZone(events.timestamp, %(hogql_val_4)s)) AS last_seen, min(toTimeZone(events.timestamp, %(hogql_val_5)s)) AS first_seen, reverse(arrayMap(x -> countEqual(groupArray(dateDiff(%(hogql_val_6)s, toStartOfHour(toTimeZone(events.timestamp, %(hogql_val_7)s)), toStartOfHour(now64(6, %(hogql_val_8)s)))), x), range(24))) AS volumeDay, reverse(arrayMap(x -> countEqual(groupArray(dateDiff(%(hogql_val_9)s, toStartOfDay(toTimeZone(events.timestamp, %(hogql_val_10)s)), toStartOfDay(now64(6, %(hogql_val_11)s)))), x), range(31))) AS volumeMonth, reverse(arrayMap(x -> countEqual(groupArray(dateDiff(%(hogql_val_12)s, toStartOfHour(toTimeZone(events.timestamp, %(hogql_val_13)s)), toStartOfHour(now64(6, %(hogql_val_14)s)))), x), range(168))) AS customVolume 
  FROM events LEFT OUTER JOIN (
  SELECT argMax(error_tracking_issue_fingerprint_overrides.issue_id, error_tracking_issue_fingerprint_overrides.version) AS issue_id, error_tracking_issue_fingerprint_overrides.fingerprint AS fingerprint 
  FROM error_tracking_issue_fingerprint_overrides 
  WHERE equals(error_tracking_issue_fingerprint_overrides.team_id, 99999) 
  GROUP BY error_tracking_issue_fingerprint_overrides.fingerprint 
  HAVING ifNull(equals(argMax(error_tracking_issue_fingerprint_overrides.is_deleted, error_tracking_issue_fingerprint_overrides.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__exception_issue_override ON equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), events__exception_issue_override.fingerprint) 
  WHERE and(equals(events.team_id, 99999), and(equals(events.event, %(hogql_val_15)s), isNotNull(if(not(empty(events__exception_issue_override.issue_id)), events__exception_issue_override.issue_id, accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_16)s), ''), 'null'), '^"|"$', ''), %(hogql_val_17)s))), or(and(greater(toTimeZone(events.timestamp, %(hogql_val_18)s), parseDateTime64BestEffort(%(hogql_val_19)s, 6, %(hogql_val_20)s)), less(toTimeZone(events.timestamp, %(hogql_val_21)s), parseDateTime64BestEffort(%(hogql_val_22)s, 6, %(hogql_val_23)s))), and(greater(toTimeZone(events.timestamp, %(hogql_val_24)s), toDateTime(%(hogql_val_25)s, %(hogql_val_26)s)), less(toTimeZone(events.timestamp, %(hogql_val_27)s), toDateTime64(%(hogql_val_28)s, 6, %(hogql_val_29)s)))))) 
  GROUP BY if(not(empty(events__exception_issue_override.issue_id)), events__exception_issue_override.issue_id, accurateCastOrNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_30)s), ''), 'null'), '^"|"$', ''), %(hogql_val_31)s)) ORDER BY occurrences DESC 
  LIMIT 51 OFFSET 0 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT issue_id AS id, count(DISTINCT uuid) AS occurrences, count(DISTINCT nullIf($session_id, '')) AS sessions, count(DISTINCT distinct_id) AS users, max(timestamp) AS last_seen, min(timestamp) AS first_seen, reverse(arrayMap(x -> countEqual(groupArray(dateDiff('hour', toStartOfHour(timestamp), toStartOfHour(now()))), x), range(24))) AS volumeDay, reverse(arrayMap(x -> countEqual(groupArray(dateDiff('day', toStartOfDay(timestamp), toStartOfDay(now()))), x), range(31))) AS volumeMonth, reverse(arrayMap(x -> countEqual(groupArray(dateDiff('hour', toStartOfHour(timestamp), toStartOfHour(now()))), x), range(168))) AS customVolume 
  FROM events 
  WHERE and(equals(event, '$exception'), isNotNull(issue_id), or(and(greater(timestamp, toDateTime('2025-02-10 23:53:03.175952+02:30')), less(timestamp, toDateTime('2025-02-11 23:53'))), and(greater(timestamp, toDateTime('2025-02-12 23:53:03')), less(timestamp, toDateTime('2025-02-13 23:53:03.175952'))))) 
  GROUP BY issue_id ORDER BY occurrences DESC 
  LIMIT 51 OFFSET 0
  '''
# ---
# name: TestQuery.test_hogql_arrays
  '''
  -- ClickHouse
  
  SELECT [1, 2, 3], [10, 11, 12][1] 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT [1, 2, 3], [10, 11, 12][1] 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_hogql_groupby_unnecessary_ifnull
  '''
  -- ClickHouse
  
  SELECT toDate(toTimeZone(events.timestamp, %(hogql_val_0)s)) AS timestamp, count() AS cnt 
  FROM events 
  WHERE and(equals(events.team_id, 99999), greaterOrEquals(timestamp, addDays(today(), -10))) 
  GROUP BY timestamp 
  HAVING ifNull(greater(cnt, 10), 0) 
  LIMIT 1 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT toDate(timestamp) AS timestamp, count() AS cnt 
  FROM events 
  WHERE greaterOrEquals(timestamp, addDays(today(), -10)) 
  GROUP BY timestamp 
  HAVING greater(cnt, 10) 
  LIMIT 1
  '''
# ---
# name: TestQuery.test_hogql_lambdas
  '''
  -- ClickHouse
  
  SELECT arrayMap(x -> multiply(x, 2), [1, 2, 3]) AS `arrayMap(x -> multiply(x, 2), [1, 2, 3])`, 1 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT arrayMap(x -> multiply(x, 2), [1, 2, 3]), 1 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_hogql_proper_ifnull
  '''
  -- ClickHouse
  
  SELECT major_versions.major_version AS major_version, count() AS user_count, round(divide(multiply(100, count()), sum(count()) OVER ()), 2) AS percentage 
  FROM (
  SELECT latest_events.distinct_id AS distinct_id, latest_events.latest_os_version AS latest_os_version, splitByChar(%(hogql_val_6)s, ifNull(latest_events.latest_os_version, %(hogql_val_7)s))[1] AS major_version 
  FROM (
  SELECT events.distinct_id AS distinct_id, argMax(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), toTimeZone(events.timestamp, %(hogql_val_1)s)) AS latest_os_version 
  FROM events 
  WHERE and(equals(events.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), %(hogql_val_3)s), 0), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_4)s), minus(now64(6, %(hogql_val_5)s), toIntervalDay(30)))) 
  GROUP BY events.distinct_id) AS latest_events) AS major_versions 
  WHERE in(major_versions.major_version, tuple(%(hogql_val_8)s, %(hogql_val_9)s, %(hogql_val_10)s)) 
  GROUP BY major_versions.major_version ORDER BY major_versions.major_version ASC 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT major_version, count() AS user_count, round(divide(multiply(100, count()), sum(count()) OVER ()), 2) AS percentage 
  FROM (
  SELECT distinct_id, latest_os_version, splitByChar('.', ifNull(latest_os_version, ''))[1] AS major_version 
  FROM (
  SELECT distinct_id, argMax(properties.$os_version, timestamp) AS latest_os_version 
  FROM events 
  WHERE and(equals(properties.$os, 'iOS'), greaterOrEquals(timestamp, minus(now(), toIntervalDay(30)))) 
  GROUP BY distinct_id) AS latest_events) AS major_versions 
  WHERE in(major_version, tuple('17', '18', '26')) 
  GROUP BY major_version ORDER BY major_version ASC 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_hogql_query_filters
  '''
  -- ClickHouse
  
  SELECT events.event AS event, events.distinct_id AS distinct_id 
  FROM events 
  WHERE and(equals(events.team_id, 99999), equals(events.distinct_id, %(hogql_val_0)s), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_1)s), ''), 'null'), '^"|"$', ''), %(hogql_val_2)s), 0)) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, distinct_id 
  FROM events 
  WHERE and(equals(distinct_id, 'RANDOM_TEST_ID::UUID'), equals(properties.index, '4')) 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_hogql_query_filters.1
  '''
  
  SELECT event, distinct_id 
  FROM events 
  WHERE and(equals(distinct_id, 'RANDOM_TEST_ID::UUID'), equals(properties.index, '4')) 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_hogql_query_filters.2
  '''
  -- ClickHouse
  
  SELECT events.event AS event, events.distinct_id AS distinct_id 
  FROM events 
  WHERE and(equals(events.team_id, 99999), equals(events.distinct_id, %(hogql_val_0)s), and(ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_1)s), ''), 'null'), '^"|"$', ''), %(hogql_val_2)s), 0), less(toTimeZone(events.timestamp, %(hogql_val_3)s), toDateTime64('2020-01-02 00:00:00.000000', 6, 'UTC')), greaterOrEquals(toTimeZone(events.timestamp, %(hogql_val_4)s), toDateTime64('2020-01-01 00:00:00.000000', 6, 'UTC')))) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, distinct_id 
  FROM events 
  WHERE and(equals(distinct_id, 'RANDOM_TEST_ID::UUID'), and(equals(properties.index, '4'), less(timestamp, toDateTime('2020-01-02 00:00:00.000000')), greaterOrEquals(timestamp, toDateTime('2020-01-01 00:00:00.000000')))) 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_hogql_query_filters.3
  '''
  
  SELECT event, distinct_id 
  FROM events 
  WHERE and(equals(distinct_id, 'RANDOM_TEST_ID::UUID'), and(equals(properties.index, '4'), less(timestamp, toDateTime('2020-01-02 00:00:00.000000')), greaterOrEquals(timestamp, toDateTime('2020-01-01 00:00:00.000000')))) 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_hogql_query_filters_alias
  '''
  -- ClickHouse
  
  SELECT e.event AS event, e.distinct_id AS distinct_id 
  FROM events AS e 
  WHERE and(equals(e.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), %(hogql_val_1)s), 0)) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, distinct_id 
  FROM events AS e 
  WHERE equals(properties.random_uuid, 'RANDOM_TEST_ID::UUID') 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_hogql_query_filters_session_date_range
  '''
  -- ClickHouse
  
  SELECT sessions.session_id AS session_id, sessions.`$entry_current_url` AS `$entry_current_url` 
  FROM (
  SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id, nullIf(nullIf(argMinMerge(raw_sessions.entry_url), %(hogql_val_0)s), %(hogql_val_1)s) AS `$entry_current_url`, min(toTimeZone(raw_sessions.min_timestamp, %(hogql_val_2)s)) AS `$start_timestamp`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE and(equals(raw_sessions.team_id, 99999), lessOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), plus(toDateTime64('today', 6, 'UTC'), toIntervalDay(3))), greaterOrEquals(fromUnixTimestamp(intDiv(toUInt64(bitShiftRight(raw_sessions.session_id_v7, 80)), 1000)), minus(toDateTime64('today', 6, 'UTC'), toIntervalDay(3)))) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS sessions 
  WHERE and(ifNull(less(sessions.`$start_timestamp`, toDateTime64('today', 6, 'UTC')), 0), ifNull(greaterOrEquals(sessions.`$start_timestamp`, toDateTime64('today', 6, 'UTC')), 0)) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT session_id, $entry_current_url 
  FROM sessions 
  WHERE and(less($start_timestamp, toDateTime('2024-07-06 00:00:00.000000')), greaterOrEquals($start_timestamp, toDateTime('2024-07-04 00:00:00.000000'))) 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_hogql_query_filters_session_date_range.1
  '''
  
  SELECT session_id, $entry_current_url 
  FROM sessions 
  WHERE and(less($start_timestamp, toDateTime('2024-07-06 00:00:00.000000')), greaterOrEquals($start_timestamp, toDateTime('2024-07-04 00:00:00.000000'))) 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_hogql_query_session_filters
  '''
  -- ClickHouse
  
  SELECT sessions.session_id AS session_id, sessions.`$entry_current_url` AS `$entry_current_url` 
  FROM (
  SELECT toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions.session_id_v7, 64), bitShiftRight(raw_sessions.session_id_v7, 64)))) AS session_id, nullIf(nullIf(argMinMerge(raw_sessions.entry_url), %(hogql_val_0)s), %(hogql_val_1)s) AS `$entry_current_url`, raw_sessions.session_id_v7 AS session_id_v7 
  FROM raw_sessions 
  WHERE equals(raw_sessions.team_id, 99999) 
  GROUP BY raw_sessions.session_id_v7, raw_sessions.session_id_v7) AS sessions 
  WHERE ifNull(equals(sessions.`$entry_current_url`, %(hogql_val_2)s), 0) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT session_id, $entry_current_url 
  FROM sessions 
  WHERE and(equals(sessions.$entry_current_url, 'https://example.com/1'), 1) 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_hogql_query_session_filters.1
  '''
  
  SELECT session_id, $entry_current_url 
  FROM sessions 
  WHERE and(equals(sessions.$entry_current_url, 'https://example.com/1'), 1) 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_hogql_union_all_limits
  '''
  -- ClickHouse
  
  SELECT events.event AS event 
  FROM events 
  WHERE equals(events.team_id, 99999) 
  LIMIT 100 UNION ALL 
  SELECT events.event AS event 
  FROM events 
  WHERE equals(events.team_id, 99999) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event 
  FROM events 
  LIMIT 100 UNION ALL 
  SELECT event 
  FROM events 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_hogql_unnecessary_ifnull
  '''
  -- ClickHouse
  
  SELECT toDate(toTimeZone(events.timestamp, %(hogql_val_0)s)) AS timestamp, JSONExtractInt(events.properties, %(hogql_val_1)s) AS json_int 
  FROM events 
  WHERE and(equals(events.team_id, 99999), greaterOrEquals(timestamp, addDays(today(), -10)), equals(json_int, 17)) 
  LIMIT 1 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT toDate(timestamp) AS timestamp, JSONExtractInt(properties, 'field') AS json_int 
  FROM events 
  WHERE and(greaterOrEquals(timestamp, addDays(today(), -10)), equals(json_int, 17)) 
  LIMIT 1
  '''
# ---
# name: TestQuery.test_join_with_property_materialized_session_id
  '''
  -- ClickHouse
  
  SELECT e.event AS event, s.session_id AS session_id 
  FROM events AS e LEFT JOIN (
  SELECT session_replay_events.session_id AS session_id 
  FROM session_replay_events 
  WHERE equals(session_replay_events.team_id, 99999) 
  GROUP BY session_replay_events.session_id) AS s ON equals(s.session_id, nullIf(nullIf(e.`$session_id`, ''), 'null')) 
  WHERE and(equals(e.team_id, 99999), isNotNull(nullIf(nullIf(e.`$session_id`, ''), 'null'))) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT e.event, s.session_id 
  FROM events AS e LEFT JOIN session_replay_events AS s ON equals(s.session_id, e.properties.$session_id) 
  WHERE notEquals(e.properties.$session_id, NULL) 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_join_with_property_materialized_session_id.1
  '''
  
  SELECT e.event, s.session_id 
  FROM events AS e LEFT JOIN session_replay_events AS s ON equals(s.session_id, e.properties.$session_id) 
  WHERE notEquals(e.properties.$session_id, NULL) 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_join_with_property_materialized_session_id.2
  '''
  -- ClickHouse
  
  SELECT e.event AS event, s.session_id AS session_id 
  FROM (
  SELECT session_replay_events.session_id AS session_id 
  FROM session_replay_events 
  WHERE equals(session_replay_events.team_id, 99999) 
  GROUP BY session_replay_events.session_id) AS s LEFT JOIN events AS e ON equals(nullIf(nullIf(e.`$session_id`, ''), 'null'), s.session_id) 
  WHERE and(equals(e.team_id, 99999), isNotNull(nullIf(nullIf(e.`$session_id`, ''), 'null'))) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT e.event, s.session_id 
  FROM session_replay_events AS s LEFT JOIN events AS e ON equals(e.properties.$session_id, s.session_id) 
  WHERE notEquals(e.properties.$session_id, NULL) 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_join_with_property_materialized_session_id.3
  '''
  
  SELECT e.event, s.session_id 
  FROM session_replay_events AS s LEFT JOIN events AS e ON equals(e.properties.$session_id, s.session_id) 
  WHERE notEquals(e.properties.$session_id, NULL) 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_join_with_property_not_materialized
  '''
  -- ClickHouse
  
  SELECT e.event AS event, s.session_id AS session_id 
  FROM events AS e LEFT JOIN (
  SELECT session_replay_events.session_id AS session_id 
  FROM session_replay_events 
  WHERE equals(session_replay_events.team_id, 99999) 
  GROUP BY session_replay_events.session_id) AS s ON equals(s.session_id, replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '')) 
  WHERE and(equals(e.team_id, 99999), isNotNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, %(hogql_val_1)s), ''), 'null'), '^"|"$', ''))) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT e.event, s.session_id 
  FROM events AS e LEFT JOIN session_replay_events AS s ON equals(s.session_id, e.properties.$$$session_id) 
  WHERE notEquals(e.properties.$$$session_id, NULL) 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_join_with_property_not_materialized.1
  '''
  
  SELECT e.event, s.session_id 
  FROM events AS e LEFT JOIN session_replay_events AS s ON equals(s.session_id, e.properties.$$$session_id) 
  WHERE notEquals(e.properties.$$$session_id, NULL) 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_join_with_property_not_materialized.2
  '''
  -- ClickHouse
  
  SELECT e.event AS event, s.session_id AS session_id 
  FROM (
  SELECT session_replay_events.session_id AS session_id 
  FROM session_replay_events 
  WHERE equals(session_replay_events.team_id, 99999) 
  GROUP BY session_replay_events.session_id) AS s LEFT JOIN events AS e ON equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), s.session_id) 
  WHERE and(equals(e.team_id, 99999), isNotNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, %(hogql_val_1)s), ''), 'null'), '^"|"$', ''))) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT e.event, s.session_id 
  FROM session_replay_events AS s LEFT JOIN events AS e ON equals(e.properties.$$$session_id, s.session_id) 
  WHERE notEquals(e.properties.$$$session_id, NULL) 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_join_with_property_not_materialized.3
  '''
  
  SELECT e.event, s.session_id 
  FROM session_replay_events AS s LEFT JOIN events AS e ON equals(e.properties.$$$session_id, s.session_id) 
  WHERE notEquals(e.properties.$$$session_id, NULL) 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_prop_cohort_basic
  '''
  -- ClickHouse
  
  SELECT events.event AS event, count() AS `count()` 
  FROM events LEFT OUTER JOIN (
  SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id 
  FROM person_distinct_id_overrides 
  WHERE equals(person_distinct_id_overrides.team_id, 99999) 
  GROUP BY person_distinct_id_overrides.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) 
  WHERE and(equals(events.team_id, 99999), in(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), (
  SELECT cohortpeople.person_id AS person_id 
  FROM cohortpeople 
  WHERE and(equals(cohortpeople.team_id, 99999), equals(cohortpeople.cohort_id, XX)) 
  GROUP BY cohortpeople.person_id, cohortpeople.cohort_id, cohortpeople.version 
  HAVING ifNull(greater(sum(cohortpeople.sign), 0), 0)))) 
  GROUP BY events.event 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, count() 
  FROM events 
  WHERE in(person_id, (
  SELECT person_id 
  FROM raw_cohort_people 
  WHERE equals(cohort_id, XX) 
  GROUP BY person_id, cohort_id, version 
  HAVING greater(sum(sign), 0))) 
  GROUP BY event 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_prop_cohort_basic.1
  '''
  -- ClickHouse
  
  SELECT events.event AS event, count(*) AS `count(*)` 
  FROM events 
  WHERE and(equals(events.team_id, 99999), in(events.person_id, (
  SELECT cohortpeople.person_id AS person_id 
  FROM cohortpeople 
  WHERE and(equals(cohortpeople.team_id, 99999), equals(cohortpeople.cohort_id, XX)) 
  GROUP BY cohortpeople.person_id, cohortpeople.cohort_id, cohortpeople.version 
  HAVING ifNull(greater(sum(cohortpeople.sign), 0), 0)))) 
  GROUP BY events.event 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, count(*) 
  FROM events 
  WHERE in(person_id, (
  SELECT person_id 
  FROM raw_cohort_people 
  WHERE equals(cohort_id, XX) 
  GROUP BY person_id, cohort_id, version 
  HAVING greater(sum(sign), 0))) 
  GROUP BY event 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_prop_cohort_static
  '''
  -- ClickHouse
  
  SELECT events.event AS event, count() AS `count()` 
  FROM events LEFT OUTER JOIN (
  SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id 
  FROM person_distinct_id_overrides 
  WHERE equals(person_distinct_id_overrides.team_id, 99999) 
  GROUP BY person_distinct_id_overrides.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) 
  WHERE and(equals(events.team_id, 99999), in(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), (
  SELECT person_static_cohort.person_id AS person_id 
  FROM person_static_cohort 
  WHERE and(equals(person_static_cohort.team_id, 99999), equals(person_static_cohort.cohort_id, XX))))) 
  GROUP BY events.event 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, count() 
  FROM events 
  WHERE in(person_id, (
  SELECT person_id 
  FROM static_cohort_people 
  WHERE equals(cohort_id, XX))) 
  GROUP BY event 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_prop_cohort_static.1
  '''
  -- ClickHouse
  
  SELECT events.event AS event, count(*) AS `count(*)` 
  FROM events 
  WHERE and(equals(events.team_id, 99999), in(events.person_id, (
  SELECT person_static_cohort.person_id AS person_id 
  FROM person_static_cohort 
  WHERE and(equals(person_static_cohort.team_id, 99999), equals(person_static_cohort.cohort_id, XX))))) 
  GROUP BY events.event 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, count(*) 
  FROM events 
  WHERE in(person_id, (
  SELECT person_id 
  FROM static_cohort_people 
  WHERE equals(cohort_id, XX))) 
  GROUP BY event 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_query
  '''
  -- ClickHouse
  
  SELECT count() AS `count()`, events.event AS event 
  FROM events 
  WHERE and(equals(events.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), %(hogql_val_1)s), 0)) 
  GROUP BY events.event 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT count(), event 
  FROM events 
  WHERE equals(properties.random_uuid, 'RANDOM_TEST_ID::UUID') 
  GROUP BY event 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_query_distinct
  '''
  -- ClickHouse
  
  SELECT DISTINCT persons.properties___sneaky_mail AS sneaky_mail 
  FROM (
  SELECT argMax(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), person.version) AS properties___sneaky_mail, argMax(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_1)s), ''), 'null'), '^"|"$', ''), person.version) AS properties___random_uuid, person.id AS id 
  FROM person 
  WHERE and(equals(person.team_id, 99999), in(id, (
  SELECT where_optimization.id AS id 
  FROM person AS where_optimization 
  WHERE and(equals(where_optimization.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, %(hogql_val_2)s), ''), 'null'), '^"|"$', ''), %(hogql_val_3)s), 0))))) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_4)s), person.version), plus(now64(6, %(hogql_val_5)s), toIntervalDay(1))), 0))) AS persons 
  WHERE ifNull(equals(persons.properties___random_uuid, %(hogql_val_6)s), 0) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT DISTINCT properties.sneaky_mail 
  FROM persons 
  WHERE equals(properties.random_uuid, 'RANDOM_TEST_ID::UUID') 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_query_joins_events_e_pdi
  '''
  -- ClickHouse
  
  SELECT e.event AS event, toTimeZone(e.timestamp, %(hogql_val_0)s) AS timestamp, e__pdi.distinct_id AS distinct_id, e__pdi.person_id AS person_id 
  FROM events AS e INNER JOIN (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 99999) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id) 
  WHERE equals(e.team_id, 99999) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, e.timestamp, e.pdi.distinct_id, pdi.person_id 
  FROM events AS e 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_query_joins_events_pdi
  '''
  -- ClickHouse
  
  SELECT events.event AS event, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp, events__pdi.distinct_id AS distinct_id, events__pdi.person_id AS person_id 
  FROM events INNER JOIN (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 99999) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__pdi ON equals(events.distinct_id, events__pdi.distinct_id) 
  WHERE equals(events.team_id, 99999) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, timestamp, pdi.distinct_id, pdi.person_id 
  FROM events 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_query_joins_events_pdi_e_person_properties
  '''
  -- ClickHouse
  
  SELECT e.event AS event, toTimeZone(e.timestamp, %(hogql_val_3)s) AS timestamp, e__pdi.distinct_id AS distinct_id, e__pdi__person.properties___sneaky_mail AS sneaky_mail 
  FROM events AS e INNER JOIN (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS e__pdi___person_id, argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 99999) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id) LEFT JOIN (
  SELECT person.id AS id, replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '') AS properties___sneaky_mail 
  FROM person 
  WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version), (
  SELECT person.id AS id, max(person.version) AS version 
  FROM person 
  WHERE equals(person.team_id, 99999) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0))))) 
  SETTINGS optimize_aggregation_in_order=1) AS e__pdi__person ON equals(e__pdi.e__pdi___person_id, e__pdi__person.id) 
  WHERE equals(e.team_id, 99999) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, e.timestamp, pdi.distinct_id, e.pdi.person.properties.sneaky_mail 
  FROM events AS e 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_query_joins_events_pdi_person
  '''
  -- ClickHouse
  
  SELECT events.event AS event, toTimeZone(events.timestamp, %(hogql_val_2)s) AS timestamp, events__pdi.distinct_id AS distinct_id, events__pdi__person.id AS id 
  FROM events INNER JOIN (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS events__pdi___person_id, argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 99999) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__pdi ON equals(events.distinct_id, events__pdi.distinct_id) LEFT JOIN (
  SELECT person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 99999) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_0)s), person.version), plus(now64(6, %(hogql_val_1)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS events__pdi__person ON equals(events__pdi.events__pdi___person_id, events__pdi__person.id) 
  WHERE equals(events.team_id, 99999) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, timestamp, pdi.distinct_id, pdi.person.id 
  FROM events 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_query_joins_events_pdi_person_properties
  '''
  -- ClickHouse
  
  SELECT events.event AS event, toTimeZone(events.timestamp, %(hogql_val_3)s) AS timestamp, events__pdi.distinct_id AS distinct_id, events__pdi__person.properties___sneaky_mail AS sneaky_mail 
  FROM events INNER JOIN (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS events__pdi___person_id, argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 99999) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__pdi ON equals(events.distinct_id, events__pdi.distinct_id) LEFT JOIN (
  SELECT person.id AS id, replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '') AS properties___sneaky_mail 
  FROM person 
  WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version), (
  SELECT person.id AS id, max(person.version) AS version 
  FROM person 
  WHERE equals(person.team_id, 99999) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0))))) 
  SETTINGS optimize_aggregation_in_order=1) AS events__pdi__person ON equals(events__pdi.events__pdi___person_id, events__pdi__person.id) 
  WHERE equals(events.team_id, 99999) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, timestamp, pdi.distinct_id, pdi.person.properties.sneaky_mail 
  FROM events 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_query_joins_events_person_properties
  '''
  -- ClickHouse
  
  SELECT e.event AS event, toTimeZone(e.timestamp, %(hogql_val_3)s) AS timestamp, e__pdi__person.properties___sneaky_mail AS sneaky_mail 
  FROM events AS e INNER JOIN (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS e__pdi___person_id, argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 99999) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id) LEFT JOIN (
  SELECT person.id AS id, replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '') AS properties___sneaky_mail 
  FROM person 
  WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version), (
  SELECT person.id AS id, max(person.version) AS version 
  FROM person 
  WHERE equals(person.team_id, 99999) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0))))) 
  SETTINGS optimize_aggregation_in_order=1) AS e__pdi__person ON equals(e__pdi.e__pdi___person_id, e__pdi__person.id) 
  WHERE equals(e.team_id, 99999) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, e.timestamp, e.pdi.person.properties.sneaky_mail 
  FROM events AS e 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_query_joins_events_person_properties_in_aggregration
  '''
  -- ClickHouse
  
  SELECT s__pdi__person.properties___sneaky_mail AS sneaky_mail, count() AS `count()` 
  FROM events AS s INNER JOIN (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS s__pdi___person_id, argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 99999) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS s__pdi ON equals(s.distinct_id, s__pdi.distinct_id) LEFT JOIN (
  SELECT person.id AS id, replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '') AS properties___sneaky_mail 
  FROM person 
  WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version), (
  SELECT person.id AS id, max(person.version) AS version 
  FROM person 
  WHERE equals(person.team_id, 99999) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0))))) 
  SETTINGS optimize_aggregation_in_order=1) AS s__pdi__person ON equals(s__pdi.s__pdi___person_id, s__pdi__person.id) 
  WHERE equals(s.team_id, 99999) 
  GROUP BY s__pdi__person.properties___sneaky_mail 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT s.pdi.person.properties.sneaky_mail, count() 
  FROM events AS s 
  GROUP BY s.pdi.person.properties.sneaky_mail 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_query_joins_pdi
  '''
  -- ClickHouse
  
  SELECT e.event AS event, toTimeZone(e.timestamp, %(hogql_val_0)s) AS timestamp, pdi.person_id AS person_id 
  FROM events AS e INNER JOIN (
  SELECT person_distinct_id2.distinct_id AS distinct_id, argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 99999) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS pdi ON equals(e.distinct_id, pdi.distinct_id) 
  WHERE equals(e.team_id, 99999) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, timestamp, pdi.person_id 
  FROM events AS e INNER JOIN (
  SELECT distinct_id, argMax(person_id, version) AS person_id 
  FROM raw_person_distinct_ids 
  GROUP BY distinct_id 
  HAVING equals(argMax(is_deleted, version), 0)) AS pdi ON equals(e.distinct_id, pdi.distinct_id) 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_query_joins_pdi_person_properties
  '''
  -- ClickHouse
  
  SELECT pdi.distinct_id AS distinct_id, pdi__person.properties___sneaky_mail AS sneaky_mail 
  FROM (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS pdi___person_id, argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 99999) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS pdi LEFT JOIN (
  SELECT person.id AS id, replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '') AS properties___sneaky_mail 
  FROM person 
  WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version), (
  SELECT person.id AS id, max(person.version) AS version 
  FROM person 
  WHERE equals(person.team_id, 99999) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0))))) 
  SETTINGS optimize_aggregation_in_order=1) AS pdi__person ON equals(pdi.pdi___person_id, pdi__person.id) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT pdi.distinct_id, pdi.person.properties.sneaky_mail 
  FROM person_distinct_ids AS pdi 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_query_joins_pdi_persons
  '''
  -- ClickHouse
  
  SELECT pdi.distinct_id AS distinct_id, pdi__person.created_at AS created_at 
  FROM (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS pdi___person_id, argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 99999) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS pdi LEFT JOIN (
  SELECT argMax(toTimeZone(person.created_at, %(hogql_val_0)s), person.version) AS created_at, person.id AS id 
  FROM person 
  WHERE equals(person.team_id, 99999) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0)) 
  SETTINGS optimize_aggregation_in_order=1) AS pdi__person ON equals(pdi.pdi___person_id, pdi__person.id) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT pdi.distinct_id, pdi.person.created_at 
  FROM person_distinct_ids AS pdi 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_query_joins_simple
  '''
  -- ClickHouse
  
  SELECT e.event AS event, toTimeZone(e.timestamp, %(hogql_val_3)s) AS timestamp, pdi.distinct_id AS distinct_id, p.id AS id, p.properties___sneaky_mail AS sneaky_mail 
  FROM events AS e LEFT JOIN (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 99999) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS pdi ON equals(pdi.distinct_id, e.distinct_id) LEFT JOIN (
  SELECT person.id AS id, replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '') AS properties___sneaky_mail 
  FROM person 
  WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version), (
  SELECT person.id AS id, max(person.version) AS version 
  FROM person 
  WHERE equals(person.team_id, 99999) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0))))) 
  SETTINGS optimize_aggregation_in_order=1) AS p ON equals(p.id, pdi.person_id) 
  WHERE equals(e.team_id, 99999) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, timestamp, pdi.distinct_id, p.id, p.properties.sneaky_mail 
  FROM events AS e LEFT JOIN person_distinct_ids AS pdi ON equals(pdi.distinct_id, e.distinct_id) LEFT JOIN persons AS p ON equals(p.id, pdi.person_id) 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_query_person_distinct_ids
  '''
  -- ClickHouse
  
  SELECT DISTINCT person_distinct_ids.person_id AS person_id, person_distinct_ids.distinct_id AS distinct_id 
  FROM (
  SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id, person_distinct_id2.distinct_id AS distinct_id 
  FROM person_distinct_id2 
  WHERE equals(person_distinct_id2.team_id, 99999) 
  GROUP BY person_distinct_id2.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS person_distinct_ids 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT DISTINCT person_id, distinct_id 
  FROM person_distinct_ids 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_query_select_person_with_joins_without_poe
  '''
  -- ClickHouse
  
  SELECT events.event AS event, toTimeZone(events.timestamp, %(hogql_val_3)s) AS timestamp, events__person.id AS id, events__person.properties___sneaky_mail AS sneaky_mail 
  FROM events LEFT OUTER JOIN (
  SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id 
  FROM person_distinct_id_overrides 
  WHERE equals(person_distinct_id_overrides.team_id, 99999) 
  GROUP BY person_distinct_id_overrides.distinct_id 
  HAVING ifNull(equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0), 0) 
  SETTINGS optimize_aggregation_in_order=1) AS events__override ON equals(events.distinct_id, events__override.distinct_id) LEFT JOIN (
  SELECT person.id AS id, replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '') AS properties___sneaky_mail 
  FROM person 
  WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version), (
  SELECT person.id AS id, max(person.version) AS version 
  FROM person 
  WHERE equals(person.team_id, 99999) 
  GROUP BY person.id 
  HAVING and(ifNull(equals(argMax(person.is_deleted, person.version), 0), 0), ifNull(less(argMax(toTimeZone(person.created_at, %(hogql_val_1)s), person.version), plus(now64(6, %(hogql_val_2)s), toIntervalDay(1))), 0))))) 
  SETTINGS optimize_aggregation_in_order=1) AS events__person ON equals(if(not(empty(events__override.distinct_id)), events__override.person_id, events.person_id), events__person.id) 
  WHERE equals(events.team_id, 99999) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, timestamp, person.id, person.properties.sneaky_mail 
  FROM events 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_query_select_person_with_poe_without_joins
  '''
  -- ClickHouse
  
  SELECT events.event AS event, toTimeZone(events.timestamp, %(hogql_val_0)s) AS timestamp, events.person_id AS id, replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.person_properties, %(hogql_val_1)s), ''), 'null'), '^"|"$', '') AS sneaky_mail 
  FROM events 
  WHERE equals(events.team_id, 99999) 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT event, timestamp, person.id, person.properties.sneaky_mail 
  FROM events 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_select_person_on_events
  '''
  -- ClickHouse
  
  SELECT replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(s.person_properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '') AS sneaky_mail, count() AS `count()` 
  FROM events AS s 
  WHERE equals(s.team_id, 99999) 
  GROUP BY replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(s.person_properties, %(hogql_val_1)s), ''), 'null'), '^"|"$', '') 
  LIMIT 10 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT poe.properties.sneaky_mail, count() 
  FROM events AS s 
  GROUP BY poe.properties.sneaky_mail 
  LIMIT 10
  '''
# ---
# name: TestQuery.test_subquery
  '''
  -- ClickHouse
  
  SELECT cnt AS cnt, event AS event 
  FROM (
  SELECT count() AS cnt, events.event AS event 
  FROM events 
  WHERE and(equals(events.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), %(hogql_val_1)s), 0)) 
  GROUP BY events.event) 
  GROUP BY cnt, event 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT cnt, event 
  FROM (
  SELECT count() AS cnt, event 
  FROM events 
  WHERE equals(properties.random_uuid, 'RANDOM_TEST_ID::UUID') 
  GROUP BY event) 
  GROUP BY cnt, event 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_subquery_alias
  '''
  -- ClickHouse
  
  SELECT c.cnt AS cnt, c.event AS event 
  FROM (
  SELECT count(*) AS cnt, events.event AS event 
  FROM events 
  WHERE and(equals(events.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', ''), %(hogql_val_1)s), 0)) 
  GROUP BY events.event) AS c 
  GROUP BY c.cnt, c.event 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT cnt, event 
  FROM (
  SELECT count(*) AS cnt, event 
  FROM events 
  WHERE equals(properties.random_uuid, 'RANDOM_TEST_ID::UUID') 
  GROUP BY event) AS c 
  GROUP BY cnt, event 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_tuple_access
  '''
  -- ClickHouse
  
  SELECT col_a AS col_a, arrayZip((sumMap((g).1, (g).2) AS x).1, x.2) AS r 
  FROM (
  SELECT col_a AS col_a, groupArray(tuple(col_b, col_c)) AS g 
  FROM (
  SELECT replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '') AS col_a, events.event AS col_b, count() AS col_c 
  FROM events 
  WHERE equals(events.team_id, 99999) 
  GROUP BY replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_1)s), ''), 'null'), '^"|"$', ''), events.event) 
  GROUP BY col_a) 
  GROUP BY col_a ORDER BY col_a ASC 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT col_a, arrayZip((sumMap((g).1, (g).2) AS x).1, x.2) AS r 
  FROM (
  SELECT col_a, groupArray(tuple(col_b, col_c)) AS g 
  FROM (
  SELECT properties.index AS col_a, event AS col_b, count() AS col_c 
  FROM events 
  GROUP BY properties.index, event) 
  GROUP BY col_a) 
  GROUP BY col_a ORDER BY col_a ASC 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_with_pivot_table_1_level
  '''
  -- ClickHouse
  
  SELECT PIVOT_FUNCTION_2.col_a AS col_a, PIVOT_FUNCTION_2.r AS r 
  FROM (
  SELECT PIVOT_FUNCTION_1.col_a AS col_a, arrayZip((sumMap((PIVOT_FUNCTION_1.g).1, (PIVOT_FUNCTION_1.g).2) AS x).1, x.2) AS r 
  FROM (
  SELECT PIVOT_TABLE_COL_ABC.col_a AS col_a, groupArray(tuple(PIVOT_TABLE_COL_ABC.col_b, PIVOT_TABLE_COL_ABC.col_c)) AS g 
  FROM (
  SELECT replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '') AS col_a, events.event AS col_b, count() AS col_c 
  FROM events 
  WHERE equals(events.team_id, 99999) 
  GROUP BY replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_1)s), ''), 'null'), '^"|"$', ''), events.event) AS PIVOT_TABLE_COL_ABC 
  GROUP BY PIVOT_TABLE_COL_ABC.col_a) AS PIVOT_FUNCTION_1 
  GROUP BY PIVOT_FUNCTION_1.col_a) AS PIVOT_FUNCTION_2 ORDER BY PIVOT_FUNCTION_2.col_a ASC 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT col_a, r 
  FROM (
  SELECT col_a, arrayZip((sumMap((g).1, (g).2) AS x).1, x.2) AS r 
  FROM (
  SELECT col_a, groupArray(tuple(col_b, col_c)) AS g 
  FROM (
  SELECT properties.index AS col_a, event AS col_b, count() AS col_c 
  FROM events 
  GROUP BY properties.index, event) AS PIVOT_TABLE_COL_ABC 
  GROUP BY col_a) AS PIVOT_FUNCTION_1 
  GROUP BY col_a) AS PIVOT_FUNCTION_2 ORDER BY col_a ASC 
  LIMIT 100
  '''
# ---
# name: TestQuery.test_with_pivot_table_2_levels
  '''
  -- ClickHouse
  
  SELECT final.col_a AS col_a, final.r AS r 
  FROM (
  SELECT PIVOT_FUNCTION_2.col_a AS col_a, PIVOT_FUNCTION_2.r AS r 
  FROM (
  SELECT PIVOT_FUNCTION_1.col_a AS col_a, arrayZip((sumMap((PIVOT_FUNCTION_1.g).1, (PIVOT_FUNCTION_1.g).2) AS x).1, x.2) AS r 
  FROM (
  SELECT PIVOT_TABLE_COL_ABC.col_a AS col_a, groupArray(tuple(PIVOT_TABLE_COL_ABC.col_b, PIVOT_TABLE_COL_ABC.col_c)) AS g 
  FROM (
  SELECT replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_0)s), ''), 'null'), '^"|"$', '') AS col_a, events.event AS col_b, count() AS col_c 
  FROM events 
  WHERE equals(events.team_id, 99999) 
  GROUP BY replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, %(hogql_val_1)s), ''), 'null'), '^"|"$', ''), events.event) AS PIVOT_TABLE_COL_ABC 
  GROUP BY PIVOT_TABLE_COL_ABC.col_a) AS PIVOT_FUNCTION_1 
  GROUP BY PIVOT_FUNCTION_1.col_a) AS PIVOT_FUNCTION_2) AS final ORDER BY final.col_a ASC 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1, format_csv_allow_double_quotes=0, output_format_json_quote_64bit_integers=1, max_ast_elements=4000000, max_expanded_ast_elements=4000000, max_bytes_before_external_group_by=0, transform_null_in=1, optimize_min_equality_disjunction_chain_length=4294967295, allow_experimental_join_condition=1
  
  -- HogQL
  
  SELECT col_a, r 
  FROM (
  SELECT col_a, r 
  FROM (
  SELECT col_a, arrayZip((sumMap((g).1, (g).2) AS x).1, x.2) AS r 
  FROM (
  SELECT col_a, groupArray(tuple(col_b, col_c)) AS g 
  FROM (
  SELECT properties.index AS col_a, event AS col_b, count() AS col_c 
  FROM events 
  GROUP BY properties.index, event) AS PIVOT_TABLE_COL_ABC 
  GROUP BY col_a) AS PIVOT_FUNCTION_1 
  GROUP BY col_a) AS PIVOT_FUNCTION_2) AS final ORDER BY col_a ASC 
  LIMIT 100
  '''
# ---
